WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141039
Web Inspector: ASSERT in InspectorTimelineAgent::internalStop
https://bugs.webkit.org/show_bug.cgi?id=141039
Summary
Web Inspector: ASSERT in InspectorTimelineAgent::internalStop
Eric Carlson
Reported
2015-01-29 09:58:45 PST
Stopwatch ASSERT when using inspector.
r178433
fixed a Stopwatch::stop ASSERT in InspectorDebuggerAgent, but InspectorTimelineAgent also has a Stopwatch so it apparently needs a similar fix. ASSERTION FAILED: !isnan(m_lastStartTime) /webkit/WebKitBuild/Debug/usr/local/include/wtf/Stopwatch.h(74) : void WTF::Stopwatch::stop() 1 0x114706f60 WTFCrash 2 0x116a48415 WTF::Stopwatch::stop() 3 0x116a7f671 WebCore::InspectorTimelineAgent::internalStop() 4 0x116a7f440 WebCore::InspectorTimelineAgent::stop(WTF::String&) 5 0x116a7f75f non-virtual thunk to WebCore::InspectorTimelineAgent::stop(WTF::String&) 6 0x1142f63ce Inspector::InspectorTimelineBackendDispatcher::stop(long, Inspector::InspectorObject const&) 7 0x1142f5f80 Inspector::InspectorTimelineBackendDispatcher::dispatch(long, WTF::String const&, WTF::Ref<Inspector::InspectorObject>&&) 8 0x1142ab7a9 Inspector::InspectorBackendDispatcher::dispatch(WTF::String const&) 9 0x116993881 WebCore::InspectorController::dispatchMessageFromFrontend(WTF::String const&) 10 0x11177db51 WebKit::WebInspector::sendMessageToBackend(WTF::String const&) 11 0x1117888ff void IPC::callMemberFunctionImpl<WebKit::WebInspector, void (WebKit::WebInspector::*)(WTF::String const&), std::__1::tuple<WTF::String>, 0ul>(WebKit::WebInspector*, void (WebKit::WebInspector::*)(WTF::String const&), std::__1::tuple<WTF::String>&&, std::index_sequence<0ul>) 12 0x111788858 void IPC::callMemberFunction<WebKit::WebInspector, void (WebKit::WebInspector::*)(WTF::String const&), std::__1::tuple<WTF::String>, std::make_index_sequence<1ul> >(std::__1::tuple<WTF::String>&&, WebKit::WebInspector*, void (WebKit::WebInspector::*)(WTF::String const&)) 13 0x1117887c6 void IPC::handleMessage<Messages::WebInspector::SendMessageToBackend, WebKit::WebInspector, void (WebKit::WebInspector::*)(WTF::String const&)>(IPC::MessageDecoder&, WebKit::WebInspector*, void (WebKit::WebInspector::*)(WTF::String const&)) 14 0x111787cfa WebKit::WebInspector::didReceiveMessage(IPC::Connection&, IPC::MessageDecoder&) 15 0x111787d67 non-virtual thunk to WebKit::WebInspector::didReceiveMessage(IPC::Connection&, IPC::MessageDecoder&) 16 0x1111e4da3 IPC::Connection::dispatchMessage(IPC::MessageDecoder&) 17 0x1111dd120 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::MessageDecoder, std::__1::default_delete<IPC::MessageDecoder> >) 18 0x1111e4b7f IPC::Connection::dispatchOneMessage() 19 0x1111f90d2 WTF::FunctionWrapper<void (IPC::Connection::*)()>::operator()(IPC::Connection*) 20 0x1111f9055 WTF::BoundFunctionImpl<WTF::FunctionWrapper<void (IPC::Connection::*)()>, void (IPC::Connection*)>::operator()() 21 0x1111f8892 WTF::Function<void ()>::operator()() const 22 0x1111f880c std::__1::__function::__func<WTF::Function<void ()>, std::__1::allocator<WTF::Function<void ()> >, void ()>::operator()() 23 0x1146b33fa std::__1::function<void ()>::operator()() const 24 0x114740841 WTF::RunLoop::performWork() 25 0x114741b24 WTF::RunLoop::performWork(void*) 26 0x7fff8b6a4a81 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 27 0x7fff8b69700d __CFRunLoopDoSources0 28 0x7fff8b69662f __CFRunLoopRun 29 0x7fff8b696028 CFRunLoopRunSpecific 30 0x7fff9046fcc7 RunCurrentEventLoopInMode 31 0x7fff9046f95b ReceiveNextEventCommon
Attachments
Patch
(3.44 KB, patch)
2015-01-29 22:03 PST
,
Brian Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-01-29 09:58:55 PST
<
rdar://problem/19648787
>
Brian Burg
Comment 2
2015-01-29 22:03:48 PST
Created
attachment 245694
[details]
Patch
WebKit Commit Bot
Comment 3
2015-01-30 15:57:09 PST
Comment on
attachment 245694
[details]
Patch Clearing flags on attachment: 245694 Committed
r179419
: <
http://trac.webkit.org/changeset/179419
>
WebKit Commit Bot
Comment 4
2015-01-30 15:57:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug