Web Inspector: ASSERT in InspectorTimelineAgent::internalStop https://bugs.webkit.org/show_bug.cgi?id=141039

Reviewed by Timothy Hatcher.

Source/WebCore:

Don't unconditionally stop the environment stopwatch, since it could have
already stopped due to the debugger pausing.

* inspector/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::internalStop):

Source/WTF:

Add messages to Stopwatch assertions, and clean up constructor.

* wtf/Stopwatch.h:
(WTF::Stopwatch::Stopwatch):
(WTF::Stopwatch::start):
(WTF::Stopwatch::stop):


Canonical link: https://commits.webkit.org/159097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179419 268f45cc-cd09-0410-ab3c-d52691b4dbfc